# python-nuxt-postgresql-boilerplate

./: .env.example  .gitignore  DESIGN_GUIDE.md  Makefile  PRD.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  notifications.py  profile.py  router.py  users.py
backend/app/core/: config.py  database.py  redis.py  security.py  seed.py
backend/app/jobs/: email_jobs.py  maintenance_jobs.py  notification_jobs.py  worker_settings.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial.py
backend/app/models/: __init__.py  notification.py  token.py  user.py
backend/app/schemas/: auth.py  notification.py  profile.py  user.py
backend/app/services/: auth_service.py  email_service.py  notification_service.py  storage_service.py  totp_service.py  user_service.py
backend/app/templates/email/: account_banned.html  account_deactivated.html  account_deletion_confirm.html  base.html  email_change_verify.html  email_verified.html  new_account_by_admin.html  password_changed.html  password_reset.html  welcome_verify.html
backend/app/ws/: notifications.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/composables/: useApi.ts  useNotifications.ts  useSidebar.ts  useTheme.ts  useToast.ts
frontend/layouts/: admin.vue  auth.vue  (+1 more)
traefik/: .env.example  docker-compose.yml
(+49 files in other folders)
