[project]
name = "loqato-channel-manager-backend"
version = "0.1.0"
description = "Loqato Channel Manager Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "arq>=0.25",
    "redis>=5.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "pillow>=10.0",
    "boto3>=1.34",
    "botocore>=1.34",
    "cryptography>=42.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
